Aula 08 - Atributos de contexto
ServletContext, HttpSession e HttpServletRequest

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ hs_err_pid*
 /Aula07Jspf/build/
 /Aula06Tarefa01/nbproject/private/
 /Aula06Tarefa01/build/
+/WebApplication1/nbproject/private/
+/Aula08Attributes/nbproject/private/
+/Aula08Attributes/build/
+/Aula08Session/nbproject/private/
+/Aula08Session/build/
