--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ hs_err_pid*
 /Aula08Attributes/build/
 /Aula08Session/nbproject/private/
 /Aula08Session/build/
+/WebApplicationTest/nbproject/private/
