--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ hs_err_pid*
 /Aula08Session/nbproject/private/
 /Aula08Session/build/
 /WebApplicationTest/nbproject/private/
+/Aula13POO/nbproject/private/
+/Aula13POO/build/
+/Aula13POO/dist/
