--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ hs_err_pid*
 /Aula13POO/nbproject/private/
 /Aula13POO/build/
 /Aula13POO/dist/
+/Aula14PooSession/nbproject/private/
+/Aula14PooSession/build/
