--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ hs_err_pid*
 /Aula13POO/dist/
 /Aula14PooSession/nbproject/private/
 /Aula14PooSession/build/
+/Aula15Jdbc/nbproject/private/
+/Aula15Jdbc/build/
+/Aula15Jdbc/dist/
+/Aula15JdbcTasks/nbproject/private/
+/Aula15JdbcTasks/build/
