Aula 16 - MyFinance$, parte 1
Aula 16 - MyFinance$, parte 1: listener de criação da base; páginas index, my-profile e users.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ hs_err_pid*
 /Aula15Jdbc/dist/
 /Aula15JdbcTasks/nbproject/private/
 /Aula15JdbcTasks/build/
+/WebApplication1/build/
+/WebApplication1/dist/
+/Aula16MyFinances/nbproject/private/
+/Aula16MyFinances/build/
+/Aula16MyFinances/dist/
